# Truss_static_analysis_cpp

Truss_static_analysis_cpp/: CMakeLists.txt  cocoa_file_dialog.h  cocoa_file_dialog.mm  main.cpp
Truss_static_analysis_cpp/src/: file_events.cpp  file_events.h  material_window.cpp
Truss_static_analysis_cpp/src/geometry_store/: geom_parameters.cpp  mconstraints.cpp
Truss_static_analysis_cpp/src/geometry_store/shaders/: shader.h
